--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
-    <script src="./js/Script.js"></script>
+    <script src="./js/script.js"></script>
 </head>
 <body>
     testesttest
