--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    testesttest
-    안녕안녕
+    <div class="carousel_wrapper">
+        <div class="carousel_wrap">
+            <ul class="carousel">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <ul class="carousel_list">
+        </ul>
+    </div>
 </body>
 </html>
